2005-03-18  Robert Schuster  <thebohemian@gmx>

	* native/jni/java-nio/gnu_java_nio_VMSelector.c: Added important
	return statement after throwing exception.

2005-03-18  Robert Schuster  <thebohemian@gmx>

	* native/jni/java-nio/gnu_java_nio_VMSelector.c: Implemented
    Java_gnu_java_nio_VMSelector_select.
	* configure.ac: Added check for sys/select.h and strerro_r().

2005-03-17  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/newsitems.txt: Add 0.14 release announcement
	and link for the dead of the gui branch.

2005-03-17  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/html2/DomHTMLDocument.java: Fixed element creation and
	check for HTML/XHTML namespace.

2005-03-16  Tom Tromey  <tromey@redhat.com>

	* gnu/java/lang/MainThread.java (MainThread): Load main class
	using system class loader.

2005-03-16  Archie Cobbs  <archie@dellroad.org>

	* native/jni/java-nio/java_nio_VMDirectByteBuffer.c: use
	global native reference to wrap persistent jclass variable.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c:
	use DeleteLocalRef() to avoid exhausting local native references.

2005-03-16  Mark Wielaard  <mark@klomp.org>

	* doc/vmintegration.texinfo: Change input start to \input.

2005-03-16  Robert Schuster  <thebohemian@gmx.net>

	* doc/vmintegration.texinfo: Added explanation
	of gnu.classpath.boot.library.path property.

2005-03-16  Robert Schuster  <thebohemian@gmx.net>

	* java/lang/Runtime.java: Added support for
	gnu.classpath.boot.library.path system property.

2005-03-14  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/DomImpl.java,
	gnu/xml/dom/html2/DomHTMLAnchorElement.java,
	gnu/xml/dom/html2/DomHTMLDocument.java,
	gnu/xml/dom/html2/DomHTMLElement.java,
	gnu/xml/dom/html2/DomHTMLFormElement.java,
	gnu/xml/dom/html2/DomHTMLFrameElement.java,
	gnu/xml/dom/html2/DomHTMLIFrameElement.java,
	gnu/xml/dom/html2/DomHTMLImpl.java,
	gnu/xml/dom/html2/DomHTMLInputElement.java,
	gnu/xml/dom/html2/DomHTMLObjectElement.java,