@@ -172,4 +172,14 @@ public final class Entity
 
     return sdata;
   }
+  
+  /**
+   * Get the entity type.
+   * @return the value of the {@link #type}.
+   */
+  public int getType() 
+  {
+    return type;
+  }  
+          
 }
